Issue #3171767 by Kingdutch, agami4: Post visibility radios are not keyboard … (#2031)
* Issue #3171767 by Kingdutch: Post visibility radios are not keyboard accessible

* Simplify behat visibility selection logic

Instead of trying to select a specific ID the change the selector logic
to use the label. This is more flexible as it relies less on the
implementation. It also ensures that we always have an accessible label
present.

--- a/themes/socialblue/assets/css/list.css
+++ b/themes/socialblue/assets/css/list.css
@@ -18,20 +18,29 @@
   color: #777;
 }
 
+.dropdown-menu--visibility .list-item--active > a,
+.dropdown-menu--visibility .list-item--active:hover > a {
+  color: inherit;
+  border-color: inherit;
+}
+
 .list-item--active,
-.list-item--active:hover {
+.list-item--active:hover,
+.list-item--active:focus-within {
   color: white;
   background-color: #1f80aa;
   border-color: #1f80aa;
 }
 
 .list-item--active .icon-small,
-.list-item--active:hover .icon-small {
+.list-item--active:hover .icon-small,
+.list-item--active:focus-within .icon-small {
   fill: white;
 }
 
 .list-item--active .help-block,
-.list-item--active:hover .help-block {
+.list-item--active:hover .help-block,
+.list-item--active:focus-within .help-block {
   color: white;
   font-weight: 300;
 }
